# twitter-translate-bot

./: .gitignore  correct_dict.yaml  main.py  pyproject.toml  settings.yaml  tweet.py  twitter_translate_bot.py
