[tool.poetry]
name = "twitter-translate-bot"
version = "0.1.0"
description = "Translate Tweets with Google Cloud Translate API."
authors = ["sakuramochi <sakuramochi.mochi.0@gmail.com>"]
license = "GPL-3.0-or-later"

[tool.poetry.dependencies]
python = "^3.7"
pyyaml = "^3.13"
requests = "^2.21"
google-api-python-client = "^1.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
